feat(test): test auth controller

--- a/backend/internal/translations/active.en.json
+++ b/backend/internal/translations/active.en.json
@@ -4,5 +4,8 @@
   },
   "emailAlreadyExists": {
     "other": "Email already exists"
+  },
+  "registerUserError": {
+    "other": "Failed to register user. Please try again later."
   }
 }
